--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests==2.25.1
-numpy==1.19.5
-pandas==1.3.1
-torch==1.9.0
-torchvision==0.10.0
-Pillow==8.3.1
-werkzeug==2.0.1
+requests
+numpy
+pandas
+torch
+torchvision
+Pillow
+werkzeug
